@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.seidel</groupId>
 	<artifactId>KuTu</artifactId>
-	<version>2.3.21.3</version>
+	<version>2.3.22</version>
 
 	<inceptionYear>2014</inceptionYear>
 
@@ -75,6 +75,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -151,6 +155,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -227,6 +235,10 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
+											-XX:+UseZGC
+											-XX:+ZGenerational
+											-XX:+ExitOnOutOfMemoryError
 										</argument>
 									</arguments>
 								</configuration>
@@ -299,6 +311,7 @@
 											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
 											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+											--add-opens=java.base/java.math=ALL-UNNAMED
 											-XX:+UseZGC
 											-XX:+ZGenerational
 											-XX:+ExitOnOutOfMemoryError
@@ -775,6 +788,7 @@
 						<jvmArg>-Xss2m</jvmArg>
 						<jvmArg>-XX:+UseParallelGC</jvmArg>
 						<jvmArg>-XX:MaxInlineLevel=20</jvmArg>
+						<jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
 					</jvmArgs>
 				</configuration>
 			</plugin>
